Feat: Se actualizaron los enlaces de navegación y el número de WhatsApp en el encabezado

--- a/src/components/interfaces/Header.astro
+++ b/src/components/interfaces/Header.astro
@@ -3,11 +3,13 @@ import { Phone } from "lucide-react";
 import { SheetMenu } from "../sheet-menu";
 
 const routes = [
-    { name: "Home", href: "/#hero" },
-    { name: "Quienes somos", href: "/#Descriptions" },
-    { name: "Servicios", href: "/#Service" },
-    { name: "Misión y visión", href: "/#WhyUs" },
-    { name: "Contáctenos", href: "/#Reserva" },
+    { name: "Inicio", href: "/#Inicio" },
+    { name: "Quienes somos", href: "/#Quienes-somos" },
+    { name: "Servicios", href: "/#Servicio" },
+    { name: "Galería", href: "/#Galeria" },
+    { name: "Testimonios", href: "/#Testimonios" },
+    { name: "Contacto", href: "/#Contacto" },
+    { name: "Ubicación", href: "/#Ubicacion" },
 ];
 ---
 
@@ -47,7 +49,7 @@ const routes = [
                     <a
                         class="inline-flex items-center justify-center gap-2 rounded-md px-5 py-2.5 text-sm font-medium text-white bg-green-600 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 focus-visible:ring-offset-blue-50 transition-colors duration-200 ease-in-out hover:bg-green-700 active:bg-green-800"
                         target="_blank"
-                        href="https://api.whatsapp.com/send?phone=56997364529&text=Hola%20quiero%20hacer%20una%20reserva.%20Que%20dias%20tenes%20disponibles%3F"
+                        href="https://api.whatsapp.com/send?phone=56969175107&text=Hola%20quiero%20hacer%20una%20reserva.%20Que%20dias%20tenes%20disponibles%3F"
                     >
                         WhatsApp
                         <Phone className="ml-2 h-4 w-4" />
