--- a/src/components/interfaces/Hero.astro
+++ b/src/components/interfaces/Hero.astro
@@ -10,7 +10,7 @@ import ImageHero4 from "@/assets/images/hero/Fotos Oficiales-51.avif";
 import ImageHero5 from "@/assets/images/hero/Fotos Oficiales-175.avif";
 ---
 
-<section class="relative py-12 md:py-32">
+<section id="Inicio" class="relative py-12 md:py-32">
     <div
         class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#f54900,transparent)] opacity-60"
     >
@@ -32,22 +32,29 @@ import ImageHero5 from "@/assets/images/hero/Fotos Oficiales-175.avif";
         <Button
             className="bg-amber-600 hover:bg-amber-700 text-white font-medium rounded-md transition-colors duration-300"
         >
-            Contacatos para hacer tu evento
-            <NotebookPen className="h-4 w-4" />
+            <a
+                href="https://api.whatsapp.com/send?phone=56969175107&text=Hola%20quiero%20hacer%20una%20reserva.%20Que%20dias%20tenes%20disponibles%3F"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="flex items-center gap-2"
+            >
+                Contacatos para hacer tu evento
+                <NotebookPen className="h-4 w-4" />
+            </a>
         </Button>
     </div>
-    <div class="mx-auto max-w-screen-xl overflow-hidden py-24 md:mt-14">
+    <div class="mx-auto max-w-screen-xl overflow-hidden py-12 md:mt-14">
         <div class="relative w-full group">
-            <div class="relative">
+            <div class="relative px-2">
                 <Image
                     src={ImageHero}
                     alt="placeholder"
-                    class="relative left-1/3 mx-auto max-h-[480px] w-full rounded-xl object-cover shadow-md lg:static lg:max-w-[60vw] xl:max-w-screen-md"
+                    class="relative mx-auto max-h-[480px] w-full rounded-xl object-cover shadow-md lg:static lg:max-w-[60vw] xl:max-w-screen-md"
                 />
                 <Image
                     src={ImageHero}
                     alt="placeholder"
-                    class="absolute mx-auto left-1/3 blur-xl saturate-200 -z-10 inset-0 max-h-[480px] w-full rounded-xl object-cover shadow-md lg:left-0 lg:max-w-[60vw] xl:max-w-screen-md"
+                    class="absolute mx-auto blur-xl saturate-200 -z-10 inset-0 max-h-[480px] w-full rounded-xl object-cover shadow-md lg:left-0 lg:max-w-[60vw] xl:max-w-screen-md"
                 />
             </div>
             <Image
@@ -63,12 +70,12 @@ import ImageHero5 from "@/assets/images/hero/Fotos Oficiales-175.avif";
             <Image
                 src={ImageHero4}
                 alt="placeholder"
-                class="absolute -top-12 left-[20%] -z-10 max-h-44 rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:top-0 md:max-h-60 lg:left-20 group-hover:rotate-0 group-hover:-left-0 transition-all duration-500 ease-in-out"
+                class="absolute -top-20 left-[20%] hidden -z-10 max-h-44 rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:top-0 md:max-h-60 lg:left-20 lg:block group-hover:rotate-0 group-hover:-left-0 transition-all duration-500 ease-in-out"
             />
             <Image
                 src={ImageHero5}
                 alt="placeholder"
-                class="absolute -bottom-14 left-[45%] max-h-44 -rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:bottom-0 md:max-h-60 lg:left-20 group-hover:rotate-0 group-hover:left-10 group-hover:-bottom-5 transition-all duration-500 ease-in-out"
+                class="absolute -bottom-20 left-[20%] hidden max-h-44 -rotate-12 rounded-xl object-cover shadow-md min-[450px]:max-h-52 sm:left-1/3 md:bottom-0 md:max-h-60 lg:left-20 lg:block group-hover:rotate-0 group-hover:left-10 group-hover:-bottom-5 transition-all duration-500 ease-in-out"
             />
         </div>
     </div>
