Feat: Se añadió un ID a la sección del mapa para mejorar la accesibilidad

--- a/src/components/interfaces/Map.astro
+++ b/src/components/interfaces/Map.astro
@@ -3,7 +3,7 @@ import ImageSubHero from "@/assets/images/map/map.avif";
 import Image from "astro/components/Image.astro";
 ---
 
-<section class="py-32 px-2">
+<section id="Ubicacion" class="py-32 px-2">
     <div class="container mx-auto relative w-full h-[500px] bg-cover bg-center">
         <div
             class="absolute z-0 inset-0 bg-gradient-to-r from-amber-100 via-red-200 to-teal-100 opacity-50 blur-2xl"
