--- a/src/components/interfaces/Subhero.astro
+++ b/src/components/interfaces/Subhero.astro
@@ -1,12 +1,12 @@
 ---
-import { MessageCircle } from "lucide-react";
+import { MessageCircle, PhoneCall } from "lucide-react";
 import { Button } from "../ui/button";
 
 import ImageSubHero from "@/assets/images/subhero/Fotos Oficiales-110.avif";
 import { Image } from "astro:assets";
 ---
 
-<section class="relative overflow-hidden py-32 px-2">
+<section id="Quienes-somos" class="relative overflow-hidden py-32 px-2">
     <div class="relative container mx-auto">
         <div class="grid items-center gap-8 lg:grid-cols-2">
             <div
@@ -25,8 +25,15 @@ import { Image } from "astro:assets";
                     class="relative z-10 flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start"
                 >
                     <Button variant="secondary">
-                        Contáctanos para hacer tu evento
-                        <MessageCircle className="h-4 w-4" />
+                        <a
+                            href="tel:56969175107"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            class="flex items-center gap-2"
+                        >
+                            También puedes llamarnos
+                            <PhoneCall className="h-4 w-4" />
+                        </a>
                     </Button>
                 </div>
             </div>
@@ -63,7 +70,7 @@ import { Image } from "astro:assets";
                         </ul>
                         <p class="text-center">
                             <a
-                                href="/matrimonio"
+                                href="https://api.whatsapp.com/send?phone=56969175107&text=Hola%20quiero%20hacer%20una%20reserva.%20Que%20dias%20tenes%20disponibles%3F"
                                 class="mt-4 inline-flex items-center justify-center gap-2 px-4 py-2 text-sm font-medium shadow-xs transition-all focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-amber-600 hover:bg-amber-700 text-white rounded-md duration-300"
                             >
                                 Consultas y reservas
@@ -72,7 +79,7 @@ import { Image } from "astro:assets";
                         </p>
                     </div>
                     <div
-                        class="aspect-[2/1] md:w-[256px] overflow-clip rounded-lg border border-border bg-background"
+                        class="md:aspect-[2/1] md:w-[256px] overflow-clip rounded-lg border border-border bg-background"
                     >
                         <p
                             class="p-4 text-md font-semibold text-pretty text-center text-zinc-700 italic"
