Feat: Se añadieron propiedades de título y descripción al componente Layout para mejorar la SEO

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,10 @@ import Contact from "@/components/interfaces/Contact.astro";
 import Map from "@/components/interfaces/Map.astro";
 ---
 
-<Layout>
+<Layout
+    title="Altos de Monardez - Centro de Eventos en La Serena"
+    description="Altos de Monardez es un centro de eventos exclusivo ubicado a solo 8 km del centro de La Serena, camino al Valle de Elqui. Un espacio diseñado para que tu evento sea más que una reunión: una experiencia inolvidable."
+>
     <Hero />
     <Subhero />
     <Service client:load />
