Feat: Se integró el componente SwiperHome en la sección Hero para mejorar la presentación visual

--- a/src/components/interfaces/Hero.astro
+++ b/src/components/interfaces/Hero.astro
@@ -8,16 +8,22 @@ import ImageHero2 from "@/assets/images/hero/Fotos Oficiales-251.avif";
 import ImageHero3 from "@/assets/images/hero/Fotos Oficiales-186.avif";
 import ImageHero4 from "@/assets/images/hero/Fotos Oficiales-51.avif";
 import ImageHero5 from "@/assets/images/hero/Fotos Oficiales-175.avif";
+import SwiperHome from "../swiperHome";
 ---
 
 <section id="Inicio" class="relative py-12 md:py-32">
+    <div
+        class="h-[100dvh] absolute inset-0 w-full z-10 [mask-image:radial-gradient(ellipse_99%_100%_at_50%_-10%,#000_80%,transparent_100%)] brightness-50 opacity-30 md:[mask-image:radial-gradient(ellipse_90%_100%_at_50%_-20%,#000_80%,transparent_100%)]"
+    >
+        <SwiperHome client:load />
+    </div>
     <div
         class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#f54900,transparent)] opacity-60"
     >
     </div>
 
     <div
-        class="relative container mx-auto max-w-screen-sm pt-10 pb-2 text-center px-2 md:py-10"
+        class="relative z-20 container mx-auto max-w-screen-sm pt-10 pb-2 text-center px-2 md:py-10"
     >
         <h2 class="mb-3 font-semibold text-4xl lg:text-7xl">
             Altos de Monardez Centro de Eventos en La Serena
@@ -43,7 +49,9 @@ import ImageHero5 from "@/assets/images/hero/Fotos Oficiales-175.avif";
             </a>
         </Button>
     </div>
-    <div class="mx-auto max-w-screen-xl overflow-hidden py-12 md:mt-14">
+    <div
+        class="mx-auto relative z-20 max-w-screen-xl overflow-hidden py-12 md:mt-14"
+    >
         <div class="relative w-full group">
             <div class="relative px-2">
                 <Image
