Actualizar Hero.astro

--- a/src/components/interfaces/Hero.astro
+++ b/src/components/interfaces/Hero.astro
@@ -13,7 +13,7 @@ import SwiperHome from "../swiperHome";
 
 <section id="Inicio" class="relative py-12 md:py-32">
     <div
-        class="h-[100dvh] absolute inset-0 w-full z-10 [mask-image:radial-gradient(ellipse_99%_100%_at_50%_-10%,#000_80%,transparent_100%)] brightness-50 opacity-30 md:[mask-image:radial-gradient(ellipse_90%_100%_at_50%_-20%,#000_80%,transparent_100%)]"
+        class="h-[100dvh] absolute inset-0 w-full z-10 [mask-image:radial-gradient(ellipse_99%_100%_at_50%_-10%,#000_80%,transparent_100%)] brightness-50 opacity-60 md:[mask-image:radial-gradient(ellipse_90%_100%_at_50%_-20%,#000_80%,transparent_100%)]"
     >
         <SwiperHome client:load />
     </div>
@@ -23,7 +23,7 @@ import SwiperHome from "../swiperHome";
     </div>
 
     <div
-        class="relative z-20 container mx-auto max-w-screen-sm pt-10 pb-2 text-center px-2 md:py-10"
+        class="relative z-20 container mx-auto max-w-screen-sm pt-24 pb-2 text-center px-2 md:pt-20 md:pb-10"
     >
         <h2 class="mb-3 font-semibold text-4xl lg:text-7xl">
             Altos de Monardez Centro de Eventos en La Serena
