Feat: Actualizar contenido del componente Subhero para reflejar la identidad de la empresa

--- a/src/components/interfaces/Subhero.astro
+++ b/src/components/interfaces/Subhero.astro
@@ -12,14 +12,18 @@ import { Image } from "astro:assets";
             <div
                 class="flex flex-col items-center text-center lg:items-start lg:text-left"
             >
-                <h1 class="my-6 text-4xl font-bold text-pretty lg:text-6xl">
-                    Matrimonios en La Serena
-                </h1>
-                <p class="mb-8 max-w-xl text-zinc-300 lg:text-xl">
-                    Contamos con un salón rústico de más de 330 m², rodeado de
-                    naturaleza, perfecto para ceremonias al aire libre,
-                    recepciones y fiestas. Todo equipado con tecnología de
-                    sonido, iluminación y multimedia.
+                <h2 class="my-6 text-4xl font-bold text-pretty lg:text-6xl">
+                    Quienes Somos
+                </h2>
+                <p class="mb-8 max-w-xl text-balance text-zinc-300 lg:text-xl">
+                    Somos una empresa familiar que inició sus servicios en
+                    febrero de 2015, convirtiéndose rápidamente en uno de los
+                    destinos preferidos para celebrar eventos junto a
+                    familiares, amigos y seres queridos. Disponemos de todas las
+                    comodidades y tecnologías necesarias para desarrollar
+                    eventos de primer nivel, tales como matrimonios,
+                    graduaciones, eventos corporativos y otros encuentros
+                    familiares.
                 </p>
                 <div
                     class="relative z-10 flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start"
