Feat: Ajustar márgenes en secciones de Contacto, Galería, Ubicación, Servicio y Testimonios para mejorar la presentación

--- a/src/components/interfaces/Contact.astro
+++ b/src/components/interfaces/Contact.astro
@@ -2,7 +2,7 @@
 import ContactFormFields from "../contact-form-fields";
 ---
 
-<section id="Contacto" class="py-32">
+<section id="Contacto" class="py-12 md:py-32">
     <div class="container mx-auto px-2">
         <div
             class="mx-auto flex max-w-screen-xl flex-col justify-between gap-10 lg:flex-row lg:gap-20"
