--- a/src/components/interfaces/Gallery.astro
+++ b/src/components/interfaces/Gallery.astro
@@ -8,7 +8,7 @@ import { ParallaxCarousel } from "../Gallery";
 import { Button } from "../ui/button";
 ---
 
-<section id="Galeria" class="py-32">
+<section id="Galeria" class="py-12 md:py-32">
     <div class="container mx-auto px-2">
         <div class="grid items-center gap-10 lg:grid-cols-2 lg:gap-20">
             <div class="flex md:justify-end">
