--- a/src/components/interfaces/Subhero.astro
+++ b/src/components/interfaces/Subhero.astro
@@ -6,7 +6,10 @@ import ImageSubHero from "@/assets/images/subhero/Fotos Oficiales-110.avif";
 import { Image } from "astro:assets";
 ---
 
-<section id="Quienes-somos" class="relative overflow-hidden py-32 px-2">
+<section
+    id="Quienes-somos"
+    class="relative overflow-hidden pt-12 pb-32 md:py-32 px-2"
+>
     <div class="relative container mx-auto">
         <div class="grid items-center gap-8 lg:grid-cols-2">
             <div
