Feat: Añadir componente TenYears para resaltar la trayectoria de la empresa

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Testimonial from "@/components/interfaces/Testimonial.astro";
 import Contact from "@/components/interfaces/Contact.astro";
 import Map from "@/components/interfaces/Map.astro";
 import Subgallery from "@/components/interfaces/Subgallery.astro";
+import TenYears from "@/components/interfaces/TenYears.astro";
 ---
 
 <Layout
@@ -16,6 +17,7 @@ import Subgallery from "@/components/interfaces/Subgallery.astro";
 >
     <Hero />
     <Subgallery />
+    <TenYears />
     <Subhero />
     <Service client:load />
     <Gallery />
