Feat: Actualizar dirección de correo electrónico de contacto

--- a/src/components/interfaces/Contact.astro
+++ b/src/components/interfaces/Contact.astro
@@ -37,12 +37,12 @@ import ContactFormFields from "../contact-form-fields";
                         <li>
                             <span class="font-bold">Email: </span>
                             <a
-                                href="mailto:info@altosdemonardez.cl"
+                                href="mailto:altosdemonardez@gmail.com"
                                 target="_blank"
                                 rel="noopener noreferrer"
                                 class="underline"
                             >
-                                info@altosdemonardez.cl
+                                altosdemonardez@gmail.com
                             </a>
                         </li>
                     </ul>
