Feat: Cambiar el color de fondo del botón "Visitanos en Google Maps" a rojo

--- a/src/components/interfaces/Map.astro
+++ b/src/components/interfaces/Map.astro
@@ -35,7 +35,7 @@ import Image from "astro/components/Image.astro";
             </p>
             <a
                 href="https://www.google.com.ar/maps/place/Altos+de+Monardez+Eventos+Ltda./@-29.929164,-71.1756793,17z/data=!3m1!4b1!4m6!3m5!1s0x969034df6adc78b1:0xfcffe50c529616a!8m2!3d-29.9291687!4d-71.1731044!16s%2Fg%2F11bwgw4t40?hl=es&entry=ttu&g_ep=EgoyMDI1MDQxNi4xIKXMDSoASAFQAw%3D%3D"
-                class="px-6 py-3 bg-amber-600 hover:bg-amber-700 text-white font-medium rounded-md transition-colors duration-300"
+                class="px-6 py-3 bg-red-600 hover:bg-red-700 text-white font-medium rounded-md transition-colors duration-300"
             >
                 Visitanos en Google Maps
             </a>
