Feat: Cambiar el color de fondo de botones y texto a rojo en varios componentes

--- a/src/components/interfaces/Subhero.astro
+++ b/src/components/interfaces/Subhero.astro
@@ -78,7 +78,7 @@ import { Image } from "astro:assets";
                         <p class="text-center">
                             <a
                                 href="https://api.whatsapp.com/send?phone=56969175107&text=Hola%20quiero%20hacer%20una%20reserva.%20Que%20dias%20tenes%20disponibles%3F"
-                                class="mt-4 inline-flex items-center justify-center gap-2 px-4 py-2 text-sm font-medium shadow-xs transition-all focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-amber-600 hover:bg-amber-700 text-white rounded-md duration-300"
+                                class="mt-4 inline-flex items-center justify-center gap-2 px-4 py-2 text-sm font-medium shadow-xs transition-all focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-red-600 hover:bg-red-700 text-white rounded-md duration-300"
                             >
                                 Consultas y reservas
                                 <MessageCircle className="h-4 w-4" />
