--- a/src/components/interfaces/Hero.astro
+++ b/src/components/interfaces/Hero.astro
@@ -36,7 +36,7 @@ import SwiperHome from "../swiperHome";
             una reunión: una experiencia inolvidable.
         </p>
         <Button
-            className="bg-amber-600 hover:bg-amber-700 text-white font-medium rounded-md transition-colors duration-300"
+            className="bg-red-600 hover:bg-red-700 text-white font-medium rounded-md transition-colors duration-300"
         >
             <a
                 href="https://api.whatsapp.com/send?phone=56969175107&text=Hola%20quiero%20hacer%20una%20reserva.%20Que%20dias%20tenes%20disponibles%3F"
