--- a/src/components/interfaces/TenYears.astro
+++ b/src/components/interfaces/TenYears.astro
@@ -10,7 +10,7 @@ import { Button } from "../ui/button";
             >
                 <h1 class="my-6 text-4xl font-bold text-pretty lg:text-6xl">
                     Cumpliendo 10 años de experiencia
-                    <span class="text-orange-500"> en el sector</span>
+                    <span class="text-red-600"> en el sector</span>
                 </h1>
                 <p class="mb-8 max-w-xl text-zinc-300 lg:text-xl">
                     Con una sólida trayectoria y un compromiso inquebrantable
@@ -25,7 +25,7 @@ import { Button } from "../ui/button";
                         <a
                             href="https://api.whatsapp.com/send?phone=56969175107&text=Hola%20ADM%20Grupo%20Empresarial,%20me%20gustaría%20recibir%20más%20información%20sobre%20los%20servicios%20que%20ofrecen."
                             target="_blank"
-                            class="flex w-full items-center justify-center rounded-md bg-orange-500 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-orange-600 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 sm:w-auto"
+                            class="flex w-full items-center justify-center rounded-md bg-red-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-600 focus:ring-offset-2 sm:w-auto"
                         >
                             Contáctenos para recibir más información
                         </a>
