--- a/src/components/interfaces/Footer.astro
+++ b/src/components/interfaces/Footer.astro
@@ -82,8 +82,9 @@ import { HeartIcon } from "lucide-react";
                 </ul>
             </div>
         </div>
-    </div><div
-        class="mt-8 flex flex-col justify-between gap-4 border-t pt-8 text-center text-sm font-medium text-muted-foreground lg:flex-row lg:items-center lg:text-left"
+    </div>
+    <div
+        class="mt-8 container mx-auto px-2 flex flex-col justify-between gap-4 border-t pt-8 text-center text-sm font-medium text-muted-foreground lg:flex-row lg:items-center lg:text-left"
     >
         <p>
             © {new Date().getFullYear()} Altos de Monardez. Todos los derechos reservados.
