Feat: Actualizar enlace de Instagram a la cuenta oficial

--- a/src/components/interfaces/Footer.astro
+++ b/src/components/interfaces/Footer.astro
@@ -30,7 +30,7 @@ import { HeartIcon } from "lucide-react";
                 <ul class="flex items-center space-x-6 text-muted-foreground">
                     <li class="font-medium hover:text-primary">
                         <a
-                            href="https://www.instagram.com/altosdemonardez/?hl=es"
+                            href="https://www.instagram.com/altosdemonardezoficial"
                             target="_blank"
                             title="Altos de Monardez en Instagram"
                         >
